...
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUsername"

                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="20dp"
                    android:hint="Username"
                    android:textSize="15sp"
...
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#909090"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                android:layout_marginTop="15dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"

                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="20dp"
                    android:hint="Password"
                    android:textSize="15sp"
...
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"

                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:text="LOG IN"
                android:textSize="20sp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/signupRedirectText"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? Sign up"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textColor="@color/greenPastel"/>

...
