<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".presentation.SignupActivity">
    
    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        android:elevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/edittext_border">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/greenPastel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please fill your information"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="#909090"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Name"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupName"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Your Name"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Email"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupEmail"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="youremail@mail.com"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupUsername"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Username"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupPassword"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm Password"
                android:textSize="13sp"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/signupConfirmPassword"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/signupButton"

                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="SIGN UP"
                android:textSize="20sp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/loginRedirectText"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Log in"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textColor="@color/greenPastel"/>

        </LinearLayout>
            

    </androidx.cardview.widget.CardView>

</LinearLayout>