<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    tools:context=".presentation.ProfileFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profilePicSection"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profileImg"
                android:src="@drawable/ic_add_profile_pic"
                android:elevation="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleName"
                android:layout_marginTop="10dp"
                android:text="Name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleUsername"
                android:text="username"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Delete Account"
                android:backgroundTint="@color/darkRed"
                android:id="@+id/deleteAccount"
                android:layout_gravity="center"/>

        </LinearLayout>

        <!-- Profile detail-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/dropdownmenu_bg"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_weight="1"
                    android:text="Name"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileName"
                    android:text="name"
                    android:layout_weight="3"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/greenPastel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_weight="1"
                    android:text="Email"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileEmail"
                    android:text="email"
                    android:layout_weight="3"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/greenPastel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_weight="1"
                    android:text="Username"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profileUsername"
                    android:text="username"
                    android:layout_weight="3"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/greenPastel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:layout_weight="1"
                    android:text="Password"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profilePassword"
                    android:text="password"
                    android:layout_weight="3"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/profileShowPass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_remove_red_eye"
                    android:paddingTop="5dp"
                    android:paddingStart="10dp"
                    android:contentDescription="Show password" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--Saved recipes-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Saved Recipes"
            android:gravity="center|top"
            android:textSize="30sp"
            android:textColor="@color/greenPastel"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/profileFeatureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="Coming soon"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#909090"
            android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>