...
        android:title="Home"/>

    <item android:id="@+id/bottom_addRecipe"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="Add Recipe"/>

    <item android:id="@+id/bottom_profile"
        android:icon="@drawable/ic_baseline_profile_pin_24"
        android:title="Your Profile"/>
</menu>
